delete all old files with experiments with the last version of the data (not updated_dataset)

--- a/scripts/updated_dataset/print-results.ipynb
+++ b/scripts/updated_dataset/print-results.ipynb
@@ -1524,6 +1524,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "MPNet      27.4\n",
+    "SimCSE     33.4\n",
+    "SBERT      \n",
+    "Crops      \n",
+    "Dropout    34.7\n",
+    "Embdd*     22.1\n",
+    "dtype: float64\n",
+    "MPNet      41.8\n",
+    "SimCSE     49.4\n",
+    "SBERT      \n",
+    "Crops      \n",
+    "Dropout    46.5\n",
+    "Embdd*     45.8\n",
+    "dtype: float64\n",
+    "MPNet      11.8\n",
+    "SimCSE     24.7\n",
+    "SBERT      \n",
+    "Crops      \n",
+    "Dropout    24.2\n",
+    "Embdd*     16.8\n",
+    "dtype: float64\n",
+    "MPNet      52.0\n",
+    "SimCSE     79.5\n",
+    "SBERT      \n",
+    "Crops      \n",
+    "Dropout    65.9\n",
+    "Embdd*     56.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1553,6 +1588,29 @@
    "outputs": [],
    "source": [
     "33.2 & 46.8 & 55.2 & 48.7 & 42.8 & 35.3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.1\n",
+      "7.9\n",
+      "3.3\n",
+      "9.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.round(42.8 - 37.7, 1))\n",
+    "print(np.round(59.8 - 51.9, 1))\n",
+    "print(np.round(35.1 - 31.8, 1))\n",
+    "print(np.round(83.0 - 73.4, 1))"
    ]
   },
   {
@@ -6200,10 +6258,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "                 MPNet  SBERT  Dropout  Dropout (train)  Crops  Crops (train)  EmbddR10  EmbddR10 (train)  RandomBERT10  RandomBERT10 (train)  \n",
     "ICLR              37.4   63.3    46.8        46.7         58.9       56.8        57.3          49.5            57.1            52.1  \n",
