update files to match state from main

--- a/scripts/updated_dataset/27-rgm-benchmarks.ipynb
+++ b/scripts/updated_dataset/27-rgm-benchmarks.ipynb
@@ -9,12 +9,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-07 14:20:34.530432: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-02-07 14:20:34.542263: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-01-28 15:59:03.516596: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-01-28 15:59:03.529326: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1738934434.554013  576478 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1738934434.557608  576478 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-07 14:20:34.572572: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1738076343.541733   27270 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1738076343.545580   27270 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-01-28 15:59:03.561775: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -72,14 +72,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'fix_all_seeds' from 'text_embeddings_src.model_stuff' (/gpfs01/berens/user/rgonzalesmarquez/phd/text-embeddings/text_embeddings_src/model_stuff.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mload_ext\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mautoreload\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mautoreload\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtext_embeddings_src\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_stuff\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      5\u001b[0m     fix_all_seeds,\n\u001b[1;32m      6\u001b[0m     train_loop,\n\u001b[1;32m      7\u001b[0m     train_loop_without_eval,\n\u001b[1;32m      8\u001b[0m     train_loop_without_eval_embedding_layer,\n\u001b[1;32m      9\u001b[0m     EmbeddingOnlyModel,\n\u001b[1;32m     10\u001b[0m     MyEmbeddingSentenceModel,\n\u001b[1;32m     11\u001b[0m )\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtext_embeddings_src\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_stuff\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     13\u001b[0m     MultOverlappingSentencesPairDataset,\n\u001b[1;32m     14\u001b[0m )\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtext_embeddings_src\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01membeddings\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m generate_embeddings\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'fix_all_seeds' from 'text_embeddings_src.model_stuff' (/gpfs01/berens/user/rgonzalesmarquez/phd/text-embeddings/text_embeddings_src/model_stuff.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -154,7 +151,7 @@
      "text": [
       "Author: Rita González-Márquez\n",
       "\n",
-      "Last updated: 2025-02-07 14:36:33CET\n",
+      "Last updated: 2025-01-28 16:02:23CET\n",
       "\n",
       "Python implementation: CPython\n",
       "Python version       : 3.12.4\n",
@@ -172,19 +169,18 @@
       "\n",
       "Hostname: rgonzalesmarquez_GPU0-llm_gber7\n",
       "\n",
-      "torch                : 2.5.0\n",
       "jupyter_black        : 0.4.0\n",
-      "distro               : 1.9.0\n",
-      "tqdm                 : 4.66.4\n",
-      "sentence_transformers: 3.3.0\n",
       "pandas               : 2.2.3\n",
+      "torch                : 2.5.0\n",
+      "mteb                 : 1.19.9\n",
+      "tqdm                 : 4.66.4\n",
+      "black                : 24.10.0\n",
+      "transformers         : 4.45.2\n",
+      "sentence_transformers: 3.3.0\n",
       "memory_profiler      : 0.61.0\n",
       "text_embeddings_src  : 0.0.0\n",
-      "transformers         : 4.45.2\n",
+      "distro               : 1.9.0\n",
       "numpy                : 1.26.4\n",
-      "black                : 24.10.0\n",
-      "matplotlib           : 3.9.2\n",
-      "mteb                 : 1.19.9\n",
       "\n",
       "Watermark: 2.5.0\n",
       "\n",
@@ -6955,6 +6951,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "# def test():\n",
+    "#     print(\"test\")\n",
+    "\n",
+    "\n",
+    "# a = test\n",
+    "# a()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer, models\n",
@@ -7424,6 +7442,203 @@
     "    / saving_path\n",
     "    / f\"results_{model_name.lower()}_crops_finetuning_1_epoch\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import text_embeddings_src.model_stuff as model_stuff\n",
+    "\n",
+    "list_funtions = dir(model_stuff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AutoAdapterModel',\n",
+       " 'AutoModel',\n",
+       " 'EmbeddingOnlyModel',\n",
+       " 'KNeighborsClassifier',\n",
+       " 'ModelWithProjectionHead',\n",
+       " 'MyEmbeddingSentenceModel',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'abstractmethod',\n",
+       " 'check_models_equal',\n",
+       " 'cls_pool',\n",
+       " 'datasets',\n",
+       " 'fix_all_seeds',\n",
+       " 'generate_embeddings',\n",
+       " 'get_linear_schedule_with_warmup',\n",
+       " 'knn_accuracy',\n",
+       " 'knn_recall',\n",
+       " 'logistic_accuracy',\n",
+       " 'mean_pool',\n",
+       " 'nn',\n",
+       " 'np',\n",
+       " 'os',\n",
+       " 'random',\n",
+       " 'run_tsne_simple',\n",
+       " 'sep_pool',\n",
+       " 'seventh_pool',\n",
+       " 'torch',\n",
+       " 'tqdm',\n",
+       " 'train_loop',\n",
+       " 'train_loop_batches_eval',\n",
+       " 'train_loop_embedding_layer',\n",
+       " 'train_loop_eval_test_loss',\n",
+       " 'train_loop_modified_scale',\n",
+       " 'train_loop_train_test_split',\n",
+       " 'train_loop_train_test_split_embedding_layer',\n",
+       " 'train_loop_tsne_and_knn_rec',\n",
+       " 'train_loop_with_projection_head',\n",
+       " 'train_loop_without_eval',\n",
+       " 'train_loop_without_eval_embedding_layer',\n",
+       " 'train_test_split']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_funtions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ALL TRAIN FUNCTIONS\n",
+    "# eval in epochs\n",
+    "'train_loop',\n",
+    "'train_loop_modified_scale',  # -- THIS IS ONE SIMPLE PARAMETER THAT COULD BE ADDED TO EVERY FUNCTION\n",
+    "\n",
+    "\n",
+    "# eval in batches\n",
+    "'train_loop_batches_eval',\n",
+    "\n",
+    "# no eval\n",
+    "'train_loop_without_eval',\n",
+    "'train_loop_without_eval_embedding_layer', # -- also in # slightly different model\n",
+    "\n",
+    "\n",
+    "# DEPRECATED\n",
+    "'train_loop_tsne_and_knn_rec',\n",
+    "'train_loop_eval_test_loss',\n",
+    "\n",
+    "\n",
+    "# slightly different model -- modified way of getting the output in the forward pass\n",
+    "'train_loop_with_projection_head',\n",
+    "'train_loop_embedding_layer',\n",
+    "\n",
+    "# train/test split\n",
+    "'train_loop_train_test_split',\n",
+    "'train_loop_train_test_split_embedding_layer',"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## SOLUTION SUGGESTION\n",
+    "\n",
+    "\n",
+    "# OLD ARGUMENTS\n",
+    "model,\n",
+    "loader,\n",
+    "device,\n",
+    "titles_abstracts_together,\n",
+    "tokenizer,\n",
+    "label_mask, \n",
+    "labels_acc,\n",
+    "optimized_rep=\"av\",\n",
+    "n_epochs=1,\n",
+    "lr=2e-5,\n",
+    "eval_metric= \"knn\",\n",
+    "return_seventh=False,\n",
+    "return_embeddings= False,\n",
+    "return_model= False,\n",
+    "\n",
+    "\n",
+    "# NEW ARGUMENTS\n",
+    "train_data =  \n",
+    "eval_data = None  # maybe None when eval is on MTEB\n",
+    "eval_labels =\n",
+    "# eval = [\"None\", \"epochs\", \"batches\", \"every_50_batches???\"]\n",
+    "eval_every_epochs = int, 0 would be like none\n",
+    "eval_every_batches = int, 0 would be like none\n",
+    "eval_metric = [\"knn\", \"lin\", \"mteb\"]\n",
+    "\n",
+    "\n",
+    "# training set up\n",
+    "...\n",
+    "\n",
+    "# initialize eval list\n",
+    "if eval != \"None\":\n",
+    "    metric = []\n",
+    "\n",
+    "for e in epochs:\n",
+    "    for b in batches:\n",
+    "        # train\n",
+    "        ...\n",
+    "        # get hidden state -- different for different models\n",
+    "        ...\n",
+    "\n",
+    "        if eval == \"batches\":\n",
+    "            # obtain rep -- same for knn and lin, NOT NECESSARY for mteb\n",
+    "            #            -- different for different models\n",
+    "            ...\n",
+    "\n",
+    "            # evaluate\n",
+    "            ...\n",
+    "\n",
+    "    if eval ==\"epochs\":\n",
+    "        # obtain rep -- same for knn and lin, different for mteb\n",
+    "        ...\n",
+    "        # evaluate\n",
+    "        ...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class MyModel(torch.nn.Module, ABC):\n",
+    "\n",
+    "#     @abstractmethod\n",
+    "#     def get_a():\n",
+    "#         pass\n",
+    "\n",
+    "#     def print_STATE():\n",
+    "#         print('a')\n",
+    "\n",
+    "# class My2Mode(MyModel):\n",
+    "#     pass\n",
+    "\n",
+    "# class EmbeddingOnlyModel(MyModel):\n",
+    "    # ...\n"
    ]
   }
  ],
