- create a legacy folder with model_stuff, embeddings and metrics.py - fix bugs in model_stuff due to updated metrics file (no knn_recall, logistic is now named linear) - change the imports in the notebooks and py files to match the legacy/ path

--- a/scripts/updated_dataset/08.2-rgm-training-model-pubmed.ipynb
+++ b/scripts/updated_dataset/08.2-rgm-training-model-pubmed.ipynb
@@ -55,7 +55,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import fix_all_seeds, train_loop\n",
+    "from text_embeddings_src.legacy.model_stuff import fix_all_seeds, train_loop\n",
     "from text_embeddings_src.data_stuff import MultOverlappingSentencesPairDataset"
    ]
   },
