--- a/scripts/updated_dataset/18.2-rgm-training-hyperparameters.ipynb
+++ b/scripts/updated_dataset/18.2-rgm-training-hyperparameters.ipynb
@@ -58,7 +58,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import (\n",
+    "from text_embeddings_src.legacy.model_stuff import (\n",
     "    fix_all_seeds,\n",
     "    train_loop,\n",
     "    train_loop_modified_scale,\n",
