--- a/scripts/updated_dataset/22-rgm-whitening.ipynb
+++ b/scripts/updated_dataset/22-rgm-whitening.ipynb
@@ -55,7 +55,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.metrics import knn_accuracy\n"
+    "from text_embeddings_src.legacy.metrics import knn_accuracy\n"
    ]
   },
   {
