--- a/scripts/updated_dataset/23-rgm-guillotine.ipynb
+++ b/scripts/updated_dataset/23-rgm-guillotine.ipynb
@@ -63,9 +63,9 @@
     "    MultOverlappingSentencesPairDataset,\n",
     "    SameSentencePairDataset\n",
     ")\n",
-    "from text_embeddings_src.embeddings import generate_embeddings_hidden_state\n",
-    "from text_embeddings_src.model_stuff import fix_all_seeds, train_loop_without_eval\n",
-    "from text_embeddings_src.metrics import knn_accuracy"
+    "from text_embeddings_src.legacy.embeddings import generate_embeddings_hidden_state\n",
+    "from text_embeddings_src.legacy.model_stuff import fix_all_seeds, train_loop_without_eval\n",
+    "from text_embeddings_src.legacy.metrics import knn_accuracy"
    ]
   },
   {
