--- a/scripts/updated_dataset/25-rgm-simcse-training.ipynb
+++ b/scripts/updated_dataset/25-rgm-simcse-training.ipynb
@@ -68,7 +68,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import (\n",
+    "from text_embeddings_src.legacy.model_stuff import (\n",
     "    train_loop,\n",
     "    fix_all_seeds,\n",
     "    train_loop_without_eval,\n",
@@ -77,8 +77,8 @@
     "from text_embeddings_src.data_stuff import (\n",
     "    SameSentencePairDataset,\n",
     ")\n",
-    "from text_embeddings_src.embeddings import generate_embeddings\n",
-    "from text_embeddings_src.metrics import knn_accuracy"
+    "from text_embeddings_src.legacy.embeddings import generate_embeddings\n",
+    "from text_embeddings_src.legacy.metrics import knn_accuracy"
    ]
   },
   {
