--- a/scripts/updated_dataset/27-rgm-benchmarks.ipynb
+++ b/scripts/updated_dataset/27-rgm-benchmarks.ipynb
@@ -84,7 +84,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import (\n",
+    "from text_embeddings_src.legacy.model_stuff import (\n",
     "    fix_all_seeds,\n",
     "    train_loop,\n",
     "    train_loop_without_eval,\n",
@@ -95,7 +95,7 @@
     "from text_embeddings_src.data_stuff import (\n",
     "    MultOverlappingSentencesPairDataset,\n",
     ")\n",
-    "from text_embeddings_src.embeddings import generate_embeddings"
+    "from text_embeddings_src.legacy.embeddings import generate_embeddings"
    ]
   },
   {
