--- a/scripts/updated_dataset/28-rgm-pretrained-embedding-layer.ipynb
+++ b/scripts/updated_dataset/28-rgm-pretrained-embedding-layer.ipynb
@@ -78,14 +78,14 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import fix_all_seeds, train_loop_embedding_layer, EmbeddingOnlyModel\n",
+    "from text_embeddings_src.legacy.model_stuff import fix_all_seeds, train_loop_embedding_layer, EmbeddingOnlyModel\n",
     "\n",
     "from text_embeddings_src.data_stuff import (\n",
     "    MultOverlappingSentencesPairDataset,\n",
     ")\n",
     "\n",
-    "from text_embeddings_src.embeddings import generate_embeddings_embed_layer\n",
-    "from text_embeddings_src.metrics import knn_accuracy"
+    "from text_embeddings_src.legacy.embeddings import generate_embeddings_embed_layer\n",
+    "from text_embeddings_src.legacy.metrics import knn_accuracy"
    ]
   },
   {
