--- a/scripts/updated_dataset/29-rgm-mteb-datasets-training.ipynb
+++ b/scripts/updated_dataset/29-rgm-mteb-datasets-training.ipynb
@@ -87,7 +87,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import (\n",
+    "from text_embeddings_src.legacy.model_stuff import (\n",
     "    fix_all_seeds,\n",
     "    train_loop,\n",
     "    train_loop_train_test_split,\n",
@@ -98,8 +98,8 @@
     "    MultOverlappingSentencesPairDataset,\n",
     "    SameSentencePairDataset,\n",
     ")\n",
-    "from text_embeddings_src.embeddings import generate_embeddings, generate_embeddings_embed_layer\n",
-    "from text_embeddings_src.metrics import knn_accuracy\n"
+    "from text_embeddings_src.legacy.embeddings import generate_embeddings, generate_embeddings_embed_layer\n",
+    "from text_embeddings_src.legacy.metrics import knn_accuracy\n"
    ]
   },
   {
