--- a/scripts/updated_dataset/05.2-rgm-training-models-iclr.ipynb
+++ b/scripts/updated_dataset/05.2-rgm-training-models-iclr.ipynb
@@ -40,7 +40,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import (\n",
+    "from text_embeddings_src.legacy.model_stuff import (\n",
     "    fix_all_seeds,\n",
     "    train_loop,\n",
     "    train_loop_batches_eval,\n",
@@ -49,7 +49,7 @@
     "from text_embeddings_src.data_stuff import (\n",
     "    MultOverlappingSentencesPairDataset,\n",
     ")\n",
-    "from text_embeddings_src.metrics import knn_accuracy"
+    "from text_embeddings_src.legacy.metrics import knn_accuracy"
    ]
   },
   {
