--- a/scripts/updated_dataset/20-rgm-training-projection-layer.ipynb
+++ b/scripts/updated_dataset/20-rgm-training-projection-layer.ipynb
@@ -60,7 +60,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import (\n",
+    "from text_embeddings_src.legacy.model_stuff import (\n",
     "    fix_all_seeds,\n",
     "    train_loop,\n",
     "    train_loop_with_projection_head,\n",
