--- a/scripts/updated_dataset/28-rgm-random-embedding-layer.ipynb
+++ b/scripts/updated_dataset/28-rgm-random-embedding-layer.ipynb
@@ -59,7 +59,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import (\n",
+    "from text_embeddings_src.legacy.model_stuff import (\n",
     "    fix_all_seeds,\n",
     "    train_loop_embedding_layer,\n",
     "    train_loop_train_test_split_embedding_layer,\n",
@@ -70,8 +70,8 @@
     "    MultOverlappingSentencesPairDataset,\n",
     ")\n",
     "\n",
-    "from text_embeddings_src.embeddings import generate_embeddings_embed_layer\n",
-    "from text_embeddings_src.metrics import knn_accuracy"
+    "from text_embeddings_src.legacy.embeddings import generate_embeddings_embed_layer\n",
+    "from text_embeddings_src.legacy.metrics import knn_accuracy"
    ]
   },
   {
